Fix: Replace local logo path with CDN URL
- Changed Xiaomi logo from local path to CDN URL
- Added onerror handler to hide broken images gracefully
- Fixes 404 error on Vercel deployment

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <img src="/Users/justin/Downloads/Xiaomi-logo.png.webp" alt="Xiaomi Logo">
+                <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/fd2f8f3d5e3e8c85ab08b87d4a9e1df5.png" alt="Xiaomi Logo" onerror="this.style.display='none'">
                 <span>企業調查報告</span>
             </div>
             <ul>
