--- a/index.html
+++ b/index.html
@@ -1656,55 +1656,7 @@
             <div class="innovation-hero">
                 <div class="innovation-visual" data-aos="fade-right" data-aos-delay="200">
                     <div class="innovation-badge">2026 NEW</div>
-                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/nr-pub/202501201545_innovation_hub_concept.png" alt="Xiaomi AI Home Hub Pro" style="width: 100%; background: linear-gradient(135deg, #f5f5f5 0%, #e0e0e0 100%); padding: 3rem; border-radius: 20px;">
-                    <div style="text-align: center; margin-top: 2rem;">
-                        <svg viewBox="0 0 400 300" style="width: 100%; height: auto;">
-                            <!-- 主體設備 -->
-                            <defs>
-                                <linearGradient id="deviceGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#FF6900;stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:#FF8F00;stop-opacity:1" />
-                                </linearGradient>
-                                <filter id="shadow">
-                                    <feDropShadow dx="0" dy="4" stdDeviation="8" flood-opacity="0.3"/>
-                                </filter>
-                            </defs>
-
-                            <!-- 設備主體 -->
-                            <rect x="120" y="80" width="160" height="140" rx="20" fill="url(#deviceGrad)" filter="url(#shadow)"/>
-                            <circle cx="200" cy="150" r="40" fill="rgba(255,255,255,0.3)"/>
-                            <circle cx="200" cy="150" r="30" fill="rgba(255,255,255,0.5)"/>
-                            <circle cx="200" cy="150" r="8" fill="#fff"/>
-
-                            <!-- 螢幕顯示 -->
-                            <rect x="140" y="95" width="120" height="80" rx="8" fill="#1a1a1a" opacity="0.8"/>
-                            <text x="200" y="125" text-anchor="middle" fill="#FF6900" font-size="14" font-weight="bold">AI HUB</text>
-                            <text x="200" y="145" text-anchor="middle" fill="#fff" font-size="10">24°C</text>
-                            <text x="200" y="160" text-anchor="middle" fill="#ccc" font-size="8">9.4億設備已連接</text>
-
-                            <!-- 連接線條 -->
-                            <line x1="80" y1="120" x2="120" y2="140" stroke="#FF6900" stroke-width="2" stroke-dasharray="5,5" opacity="0.6"/>
-                            <line x1="320" y1="120" x2="280" y2="140" stroke="#FF6900" stroke-width="2" stroke-dasharray="5,5" opacity="0.6"/>
-                            <line x1="200" y1="50" x2="200" y2="80" stroke="#FF6900" stroke-width="2" stroke-dasharray="5,5" opacity="0.6"/>
-                            <line x1="200" y1="220" x2="200" y2="250" stroke="#FF6900" stroke-width="2" stroke-dasharray="5,5" opacity="0.6"/>
-
-                            <!-- 連接圖標 -->
-                            <circle cx="80" cy="120" r="20" fill="#333"/>
-                            <text x="80" y="127" text-anchor="middle" font-size="20">📱</text>
-
-                            <circle cx="320" cy="120" r="20" fill="#333"/>
-                            <text x="320" y="127" text-anchor="middle" font-size="20">🚗</text>
-
-                            <circle cx="200" cy="50" r="20" fill="#333"/>
-                            <text x="200" y="57" text-anchor="middle" font-size="20">🏠</text>
-
-                            <circle cx="200" cy="250" r="20" fill="#333"/>
-                            <text x="200" y="257" text-anchor="middle" font-size="20">❤️</text>
-
-                            <!-- 標題 -->
-                            <text x="200" y="290" text-anchor="middle" fill="#333" font-size="16" font-weight="bold">Xiaomi AI Home Hub Pro</text>
-                        </svg>
-                    </div>
+                    <img src="/Users/justin/Downloads/unnamed2.jpg" alt="Xiaomi NeuroLens" style="width: 100%; border-radius: 20px;">
                 </div>
 
                 <div class="innovation-content" data-aos="fade-left" data-aos-delay="300">
