Add product demo video and background music
- Added product demonstration video section below innovation product
- Added autoplay loop background music (Xiaomi NeuroLens theme)
- Styled video container with gradient border and shadow

--- a/index.html
+++ b/index.html
@@ -923,6 +923,11 @@
     </style>
 </head>
 <body>
+    <!-- 背景音樂 -->
+    <audio autoplay loop>
+        <source src="/Users/justin/Downloads/Xiaomi NeuroLens.mp3" type="audio/mpeg">
+        您的瀏覽器不支援音訊播放。
+    </audio>
 
     <!-- Navigation -->
     <nav>
@@ -1864,6 +1869,19 @@
                             <div style="font-size: 0.95rem; opacity: 0.9;">全球2,000萬台<br>營收600億元</div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <!-- 產品展示影片 -->
+            <div style="margin-top: 4rem;" data-aos="fade-up">
+                <h5 style="font-size: 2rem; font-weight: 700; margin-bottom: 2rem; text-align: center; background: linear-gradient(90deg, #FF6900, #8B00FF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+                    <i class="fas fa-play-circle" style="margin-right: 1rem;"></i>產品展示影片
+                </h5>
+                <div style="max-width: 900px; margin: 0 auto; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 50px rgba(255,105,0,0.3); border: 3px solid #FF6900;">
+                    <video controls style="width: 100%; display: block;">
+                        <source src="/Users/justin/Downloads/英文影片已準備就緒.mp4" type="video/mp4">
+                        您的瀏覽器不支援影片播放。
+                    </video>
                 </div>
             </div>
         </div>
