Fix media file paths for deployment
- Changed all local paths to relative paths
- Added media files to repository:
  - unnamed2.jpg (NeuroLens product image)
  - Xiaomi NeuroLens.mp3 (background music)
  - 英文影片已準備就緒.mp4 (demo video)
- Files now accessible on deployed site

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
 <body>
     <!-- 背景音樂 -->
     <audio autoplay loop>
-        <source src="/Users/justin/Downloads/Xiaomi NeuroLens.mp3" type="audio/mpeg">
+        <source src="Xiaomi NeuroLens.mp3" type="audio/mpeg">
         您的瀏覽器不支援音訊播放。
     </audio>
 
@@ -1661,7 +1661,7 @@
             <div class="innovation-hero">
                 <div class="innovation-visual" data-aos="fade-right" data-aos-delay="200">
                     <div class="innovation-badge">2026 NEW</div>
-                    <img src="/Users/justin/Downloads/unnamed2.jpg" alt="Xiaomi NeuroLens" style="width: 100%; border-radius: 20px;">
+                    <img src="unnamed2.jpg" alt="Xiaomi NeuroLens" style="width: 100%; border-radius: 20px;">
                 </div>
 
                 <div class="innovation-content" data-aos="fade-left" data-aos-delay="300">
@@ -1879,7 +1879,7 @@
                 </h5>
                 <div style="max-width: 900px; margin: 0 auto; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 50px rgba(255,105,0,0.3); border: 3px solid #FF6900;">
                     <video controls style="width: 100%; display: block;">
-                        <source src="/Users/justin/Downloads/英文影片已準備就緒.mp4" type="video/mp4">
+                        <source src="英文影片已準備就緒.mp4" type="video/mp4">
                         您的瀏覽器不支援影片播放。
                     </video>
                 </div>
