Update background music to NeuroLens-2
- Replaced background music file
- Updated audio source to Xiaomi NeuroLens-2.mp3

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
 <body>
     <!-- 背景音樂 -->
     <audio id="bgMusic" loop>
-        <source src="Xiaomi NeuroLens.mp3" type="audio/mpeg">
+        <source src="Xiaomi NeuroLens-2.mp3" type="audio/mpeg">
         您的瀏覽器不支援音訊播放。
     </audio>
 
